src/main/kotlin/com/example/APITaller/error/exception/BadRequestException.kt
package com.example.APITaller.error.exception

class BadRequestException(message: String) : RuntimeException("Bad Request Exception (400). $message") {
}